# csg-format

./: CSG-format.md  README.md
csg-convert/: CMakeLists.txt
csg-convert/src/: main.cpp
csgparser/: CMakeLists.txt  README.md
csgparser/src/: csg2json.cpp  csgparser.cpp  csgparser.hpp
